<resources>
    <string name="app_name">smart glucometer</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vestibulum nibh et lorem blandit, a porttitor nulla dictum. Mauris non arcu ipsum. In et dui dignissim, auctor ante at, blandit ipsum. Nunc fermentum lacus urna, a convallis enim tempor non. Vivamus ut porttitor nisl. Integer tortor nisi, suscipit sed ipsum ac, iaculis vehicula nibh. Sed et facilisis urna, sit amet tristique justo.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="measure_Button_premeal">PREMEAL</string>
    <string name="measure_Button_postmeal">POSTMEAL</string>
    <string name="measure_Button_random">RANDOM</string>
    <string name="about_about">Tentang</string>
    <string name="about_visit_site">Kunjungi Situs Kami</string>
    <string name="graph_premealGraph">Premeal Graph (in mg/dL)</string>
    <string name="graph_postmealGraph">Postmeal Graph (in mg/dL)</string>
    <string name="graph_randomGraph">Random Graph (in mg/dL)</string>
    <string name="measure_start">START MEASURING</string>
    <string name="measure_save">SAVE RESULT</string>
    <string name="measure_again">MEASURE AGAIN</string>
    <string name="login_email">email</string>
    <string name="login_password">password</string>
    <string name="login_Button_login">LOGIN</string>
    <string name="splash_login">Login</string>
    <string name="splash_signup">Signup</string>
    <string name="measurement_separator">\u0020-\u0020</string>
    <string name="signup_terms">By clicking signup you understand and agree with the Smart Glucometer Terms and Use.</string>
    <string name="signup_signup">SIGN UP</string>
    <string name="signup_ever_having_diabetes">Ever having diabetes?</string>
    <string name="manual_input">MANUAL INPUT</string>
    <string name="input_Button_pre">PRE</string>
    <string name="input_Button_postmeal">POST</string>
    <string name="input_Button_random">RAND</string>
    <string name="input_EditText_hint">insert value in mg/dL</string>

</resources>
