<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/glutracker_medium_padding">

        <TextView
            android:layout_width="match_parent"
            style="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/graph_premealGraph"
            android:textColor="@color/material_deep_teal_500"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_premeal"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

       <TextView
            android:layout_width="match_parent"
            style="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/graph_postmealGraph"
            android:textColor="@color/material_deep_teal_500"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_postmeal"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

       <TextView
            android:layout_width="match_parent"
            style="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/graph_randomGraph"
            android:textColor="@color/material_deep_teal_500"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart_random"
            android:layout_width="match_parent"
            android:layout_height="300dp" />


    </LinearLayout>
</ScrollView>
